# tiktok-rs

./: .gitignore  README.md
.github/workflows/: cleanup-old-artifacts.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  serde_metadata_structs.rs
