[package]
name = "tiktokrs"
version = "0.1.0"
authors = ["Jack Dallas <3620144+JackDallas@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
log = "0.4.11"
serde = {version = "1.0.114", features = ["derive"] } 
serde_json = "1.0"
percent-encoding = "2.1.0"
